--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,14 @@
-:root {
-}
+@import url("./root.css");
+@import url("./components/Footer/footer.css");
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+body {
+  font-family: MonoRound, sans-serif;
 }
 
 .test-header {
