--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,5 @@
 @import url("./root.css");
 @import url("./components/Footer/footer.css");
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -8,7 +7,7 @@
 }
 
 body {
-  font-family: MonoRound, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .test-header {
