“mock up basic layout”

--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,18 @@
 @import url("./root.css");
+@import url("./components/Content/Content.css");
+@import url("./components/Header/Header.css");
+@import url("./components/SideBar/SideBar.css");
+@import url("./components/Main/main.css");
 @import url("./components/Footer/footer.css");
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+body,
+html {
+  height: 100%;
 }
 
 body {
