--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,5 +1,7 @@
 /* footer */
 footer {
+  grid-area: footer;
+
   background-color: var(--gray-9);
   font-size: var(--footer-font-size);
   padding: 2rem;
