--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -1,7 +1,7 @@
 #content {
   height: 100%;
   display: grid;
-  grid-template-columns: 20rem 1fr;
+  grid-template-columns: var(--sidebar-width) 1fr;
   grid-template-rows: 5rem 1fr max-content;
   grid-template-areas:
     "header header"
