--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 header {
   grid-area: header;
   display: grid;
-  grid-template-columns: subgrid;
+  grid-template-columns: var(--sidebar-width, 1fr);
   grid-template-areas: "header-left header-right";
   background-color: var(--gray-8);
 }
