--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,7 @@
 @import url("./components/Header/Header.css");
 @import url("./components/SideBar/SideBar.css");
 @import url("./components/Main/main.css");
+@import url("./components/Todos/todos.css");
 @import url("./components/Footer/footer.css");
 * {
   box-sizing: border-box;
