--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -1,5 +1,5 @@
 #content {
-  height: 100%;
+  min-height: 100%;
   display: grid;
   grid-template-columns: var(--sidebar-width) 1fr;
   grid-template-rows: 5rem 1fr max-content;
