--- a/src/components/Todos/todos.css
+++ b/src/components/Todos/todos.css
@@ -125,6 +125,10 @@ button {
   background-color: var(--gray-8);
 }
 
+.unchecked {
+  background-color: transparent;
+}
+
 @keyframes rotate45 {
   from {
     transform: rotate(0);
