--- a/src/components/Todos/todos.css
+++ b/src/components/Todos/todos.css
@@ -117,9 +117,9 @@ button {
   cursor: pointer;
 }
 
-.checkbox:hover:not(.checked) {
+/* .checkbox:hover:not(.checked) {
   background-color: var(--gray-5);
-}
+} */
 
 .checked {
   background-color: var(--gray-8);
