--- a/src/root.css
+++ b/src/root.css
@@ -1,4 +1,5 @@
 :root {
+  /* colors */
   --gray-1: #f8f9faff;
   --gray-2: #e9ecefff;
   --gray-3: #dee2e6ff;
@@ -8,11 +9,7 @@
   --gray-7: #495057ff;
   --gray-8: #343a40ff;
   --gray-9: #212529ff;
-
   --links: #ff3300;
-
-  /* canvas */
-  --canvas-borders: 1px solid black;
 
   /* fonts */
   --footer-font-size: 1.1rem;
@@ -30,7 +27,7 @@
 
   /* utility */
   --marginSpace: 0.3rem;
-  /* 
-  component sizes */
+
+  /* component sizes */
   --sidebar-width: 20rem;
 }
