--- a/src/components/Todos/todos.css
+++ b/src/components/Todos/todos.css
@@ -15,18 +15,20 @@
 #todo-form {
   display: grid;
   gap: 25px;
-  grid-template-columns: 1fr 3rem;
+  grid-template-columns: 5fr 1fr 1fr;
   align-content: center;
   background-color: var(--gray-4);
 }
 
 form input,
-button {
+button,
+select {
   border: 2px solid var(--gray-9);
   border-radius: var(--br-sm);
 }
 
-.todo button {
+.todo button,
+#todo-form button {
   display: grid;
   justify-content: center;
   align-items: center;
@@ -36,7 +38,7 @@ button {
   justify-self: end;
 }
 
-.todo button :hover {
+button :hover {
   scale: 1.05;
   cursor: pointer;
 }
@@ -45,7 +47,8 @@ button {
   scale: 1;
 }
 
-.todo button img {
+.todo button img,
+#todo-form button img {
   height: 1.5rem;
 }
 
@@ -62,7 +65,7 @@ button {
 
 .todo-item {
   display: grid;
-  grid-template-columns: 3rem 1fr 3rem;
+  grid-template-columns: 3rem 1fr auto 3rem;
   justify-content: center;
   align-items: center;
 }
@@ -115,6 +118,10 @@ button {
   padding: 2px 0 0 0;
   font-size: 1.5rem;
   cursor: pointer;
+}
+
+select {
+  text-align: center;
 }
 
 /* .checkbox:hover:not(.checked) {
