--- a/src/components/Todos/todos.css
+++ b/src/components/Todos/todos.css
@@ -15,7 +15,7 @@
 #todo-form {
   display: grid;
   gap: 25px;
-  grid-template-columns: 1fr 6rem 3rem;
+  grid-template-columns: 1fr auto 3rem;
   align-content: center;
   background-color: var(--gray-4);
 }
@@ -58,7 +58,8 @@ button :hover {
 }
 
 #todo-form input,
-select {
+select,
+textarea {
   width: 100%;
   border-radius: var(--br-sm);
   font-size: 1rem;
@@ -157,4 +158,24 @@ select {
     z-index: 1;
     transform: translateY(0%);
   }
+}
+
+#dateTime-wrapper {
+  display: grid;
+  grid-template-columns: 6rem max-content;
+}
+
+#dateTime-wrapper button {
+  color: var(--gray-6);
+  border: none;
+  background-color: transparent;
+  height: 1.2rem;
+  align-self: center;
+  display: grid;
+  align-items: center;
+}
+
+#dateTime-wrapper button img {
+  height: 1.5rem;
+  transform: rotate(45deg);
 }
