--- a/src/components/Todos/todos.css
+++ b/src/components/Todos/todos.css
@@ -15,14 +15,19 @@
 #todo-form {
   display: grid;
   gap: 25px;
-  grid-template-columns: 1fr auto 3rem;
+  grid-template-columns: 1fr auto 5rem;
+  grid-auto-rows: 1fr;
+  grid-template-areas:
+    "title due add"
+    "priority priority details";
   align-content: center;
   background-color: var(--gray-4);
 }
 
 form input,
 button,
-select {
+select,
+textarea {
   border: 2px solid var(--gray-9);
   border-radius: var(--br-sm);
   display: block;
@@ -36,7 +41,6 @@ select {
   justify-content: center;
   align-items: center;
 
-  height: 2rem;
   aspect-ratio: 1;
   justify-self: end;
   align-self: end;
@@ -117,7 +121,9 @@ textarea {
 }
 
 select,
-input {
+input,
+textarea,
+#todos-container button {
   height: 2rem;
 }
 
@@ -160,12 +166,12 @@ select {
   }
 }
 
-#dateTime-wrapper {
+#dateTimeInput-wrapper {
   display: grid;
   grid-template-columns: 6rem max-content;
 }
 
-#dateTime-wrapper button {
+#dateTimeInput-wrapper button {
   color: var(--gray-6);
   border: none;
   background-color: transparent;
@@ -175,7 +181,40 @@ select {
   align-items: center;
 }
 
-#dateTime-wrapper button img {
-  height: 1.5rem;
+#dateTimeInput-wrapper button img {
+  height: 1rem;
   transform: rotate(45deg);
+}
+
+#dateTimeComponent-wrapper {
+  grid-area: "due";
+  display: grid;
+  align-items: center;
+}
+
+#deadline-prompt {
+  cursor: pointer;
+  text-decoration: underline;
+  justify-self: center;
+}
+
+#title-input {
+  grid-area: "title";
+}
+
+#priority-selector {
+  grid-area: "priority";
+  grid-row: 2;
+  grid-column: -2;
+}
+
+#add-button {
+  grid-area: "add";
+}
+
+#details-input {
+  grid-area: "details";
+  display: block;
+  grid-row: 2;
+  grid-column: 1/-2;
 }
