--- a/src/components/Todos/todos.css
+++ b/src/components/Todos/todos.css
@@ -14,11 +14,11 @@
 
 #todo-form {
   display: grid;
-  gap: 25px;
-  grid-template-columns: 1fr auto 5rem;
-  grid-auto-rows: 1fr;
+  gap: 10px 15px;
+  grid-template-columns: 1fr 1fr 7rem auto;
+  grid-auto-rows: auto;
   grid-template-areas:
-    "title due add"
+    "title due . add"
     "priority priority details";
   align-content: center;
   background-color: var(--gray-4);
@@ -31,8 +31,8 @@ textarea {
   border: 2px solid var(--gray-9);
   border-radius: var(--br-sm);
   display: block;
-  align-self: end;
-  justify-self: end;
+  align-self: start;
+  justify-self: start;
 }
 
 .todo button,
@@ -43,7 +43,7 @@ textarea {
 
   aspect-ratio: 1;
   justify-self: end;
-  align-self: end;
+  align-self: start;
   font: 1em sans-serif;
 }
 
@@ -76,7 +76,7 @@ textarea {
 
 .todo-item {
   display: grid;
-  grid-template-columns: 3rem 1fr auto 3rem;
+  grid-template-columns: 3rem 1fr 3rem auto;
   justify-content: center;
   align-items: center;
 }
@@ -189,7 +189,8 @@ select {
 #dateTimeComponent-wrapper {
   grid-area: "due";
   display: grid;
-  align-items: center;
+  align-items: start;
+  grid-column: 3/4;
 }
 
 #deadline-prompt {
@@ -200,21 +201,29 @@ select {
 
 #title-input {
   grid-area: "title";
+  grid-column: 1/3;
 }
 
 #priority-selector {
   grid-area: "priority";
-  grid-row: 2;
-  grid-column: -2;
+  grid-row: 3;
+  grid-column: -3/-1;
 }
 
 #add-button {
   grid-area: "add";
+  grid-column: 4;
 }
 
 #details-input {
   grid-area: "details";
   display: block;
-  grid-row: 2;
-  grid-column: 1/-2;
+  grid-row: 3;
+  grid-column: 1/3;
+}
+
+.toggle-text {
+  grid-column: 1/ -1;
+  text-decoration: underline;
+  cursor: pointer;
 }
