--- a/src/components/Todos/todos.css
+++ b/src/components/Todos/todos.css
@@ -15,13 +15,25 @@
 #todo-form {
   display: grid;
   gap: 10px 15px;
-  grid-template-columns: 1fr 1fr 7rem auto;
-  grid-auto-rows: auto;
+  grid-template-columns: 1fr;
   grid-template-areas:
     "title due . add"
     "priority priority details";
   align-content: center;
   background-color: var(--gray-4);
+}
+
+.form-row {
+  display: grid;
+  gap: var(--space-md);
+}
+
+#form-row-1 {
+  grid-template-columns: 1fr 7rem auto;
+}
+
+#form-row-3 {
+  grid-template-columns: 1fr auto;
 }
 
 form input,
@@ -190,7 +202,6 @@ select {
   grid-area: "due";
   display: grid;
   align-items: start;
-  grid-column: 3/4;
 }
 
 #deadline-prompt {
@@ -201,29 +212,23 @@ select {
 
 #title-input {
   grid-area: "title";
-  grid-column: 1/3;
 }
 
 #priority-selector {
   grid-area: "priority";
-  grid-row: 3;
-  grid-column: -3/-1;
 }
 
 #add-button {
   grid-area: "add";
-  grid-column: 4;
 }
 
 #details-input {
   grid-area: "details";
   display: block;
-  grid-row: 3;
-  grid-column: 1/3;
 }
 
 .toggle-text {
-  grid-column: 1/ -1;
+  font-size: 0.8rem;
   text-decoration: underline;
   cursor: pointer;
 }
