--- a/src/root.css
+++ b/src/root.css
@@ -27,6 +27,7 @@
 
   /* utility */
   --marginSpace: 0.3rem;
+  --button-icon-height: 1.5rem;
 
   /* component sizes */
   --sidebar-width: 20rem;
