--- a/src/components/Todos/todos.css
+++ b/src/components/Todos/todos.css
@@ -85,7 +85,7 @@ textarea {
 .todo-item {
   width: 100%;
   display: grid;
-  grid-template-columns: auto 1fr 3rem;
+  grid-template-columns: auto 1fr auto auto;
   grid-auto-rows: 2rem;
   justify-content: start;
   align-items: center;
@@ -243,12 +243,22 @@ select {
   font-size: 0.8rem;
   text-decoration: underline;
   cursor: pointer;
+  user-select: none;
 }
 
 .due-date {
-  grid-column: 1/-1;
+  grid-column: 1/3;
   margin-top: var(--space-sm);
   font-size: 0.75rem;
+}
+
+.show-details {
+  grid-column: -3/-1;
+  justify-self: end;
+}
+
+.details {
+  grid-column: 1/-1;
 }
 
 .red {
