--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,6 +1,5 @@
 main {
   grid-area: main;
   height: 100%;
-  background-color: var(gray-1);
-  /* background-color: var(--gray-1); */
+  background-color: var(--gray-1);
 }
