--- a/src/components/Todos/todos.css
+++ b/src/components/Todos/todos.css
@@ -278,8 +278,8 @@ textarea {
   display: grid;
   align-items: center;
   justify-content: center;
-  background-color: var(--gray-2);
-  opacity: 0.75;
+  background-color: rgba(233, 236, 239, 0.75);
+
   z-index: 5;
 }
 
@@ -289,10 +289,19 @@ textarea {
   gap: var(--space-md);
   padding: var(--space-md);
   background-color: var(--gray-4);
+  opacity: 1;
+
+  border-radius: var(--br-md);
 }
 
 #edit-form input,
 #edit-form select,
-#edit-form textarea {
+#edit-form textarea,
+#edit-form button {
   width: 100%;
+  padding: var(--space-sm);
+}
+
+button {
+  cursor: pointer;
 }
