--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -2,4 +2,11 @@ main {
   grid-area: main;
   height: 100%;
   background-color: var(--gray-1);
+  text-align: center;
+  padding: var(--space-lg) 0;
+}
+
+.project-title {
+  align-self: center;
+  font-size: 3rem;
 }
