--- a/src/components/Todos/todos.css
+++ b/src/components/Todos/todos.css
@@ -97,6 +97,7 @@ textarea {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  justify-self: start;
 }
 
 #todo-form:first-child {
@@ -134,6 +135,7 @@ textarea {
   border-color: var(--gray-8);
   font-size: 1.5rem;
   cursor: pointer;
+  text-align: center;
   justify-self: start;
 }
 
@@ -162,6 +164,7 @@ select {
 
 .unchecked {
   background-color: transparent;
+  padding: 0;
 }
 
 @keyframes rotate45 {
@@ -246,12 +249,14 @@ select {
   text-decoration: underline;
   cursor: pointer;
   user-select: none;
+  justify-self: start;
 }
 
 .due-date {
   grid-column: 1/3;
   margin-top: var(--space-sm);
   font-size: 0.75rem;
+  justify-self: start;
 }
 
 .show-details {
@@ -261,6 +266,7 @@ select {
 
 .details {
   grid-column: 1/-1;
+  justify-self: start;
 }
 
 .red {
